# dpe

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  biome.json  catalog.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
dev-workspace-template/: README.md
dev-workspace-template/.claude/: settings.json
dev-workspace-template/.claude/skills/dpe-tool/: SKILL.md
dev-workspace-template/.claude/skills/dpe-tool/references/: bun.md  python.md  rust.md
dev-workspace-template/fixtures/: uppercase-text.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: README.md  authoring-a-tool.md  caching.md  cli.md  concepts.md  configuration.md  docker.md  editor-integration.md  expressions.md  frameworks.md  installing.md  path-prefixes.md  sessions.md  testing.md  writing-pipelines.md
docs/tools/: README.md  builtins.md  checkpoint.md  gate.md  normalize.md  read-file-stream.md  scan-fs.md  write-file-stream.md
dpe-dev/: Cargo.toml  README.md  package.json
dpe-dev/src/: bom.rs  embedded.rs  main.rs  scaffold.rs  setup.rs  verify.rs
frameworks/python/: README.md  pyproject.toml
frameworks/python/src/dpe/: __init__.py  _accumulators.py  _cache.py  _context.py  _envelope.py  _paths.py  _runtime.py
frameworks/python/template/: meta.json  pyproject.toml  spec.yaml
frameworks/python/template/src/__PKG__/: main.py
frameworks/python/template/tests/: test_basic.py
frameworks/python/tests/: test_accumulators.py  test_cache.py  test_integration.py  test_paths.py  test_stderr_events_conformance.py
frameworks/rust/: Cargo.toml  README.md
frameworks/rust/src/: accumulators.rs  atomic.rs  cache.rs  context.rs  envelope.rs  lib.rs  paths.rs  polling.rs  pool.rs  runtime.rs
frameworks/rust/template/: Cargo.toml  meta.json  spec.yaml
frameworks/rust/template/src/: main.rs
frameworks/rust/template/tests/: basic.rs
frameworks/rust/tests/: stderr_events_conformance.rs  test_accumulators.rs  test_integration.rs
frameworks/ts/: README.md  package.json  tsconfig.json
frameworks/ts/src/: cache.ts  context.ts  envelope.ts  index.ts  paths.ts  runtime.ts
frameworks/ts/template/: meta.json  package.json  spec.yaml  tsconfig.json
frameworks/ts/template/src/: main.ts
frameworks/ts/template/tests/: basic.test.ts
frameworks/ts/template/verify/case-basic/: expected.ndjson
frameworks/ts/tests/: cache.test.ts  envelope.test.ts  paths.test.ts  runtime.test.ts  stderr-events-conformance.test.ts
npm/dpe-darwin-arm64/: README.md  package.json
npm/dpe-darwin-x64/: README.md  package.json
npm/dpe-dev-darwin-arm64/: README.md  package.json
npm/dpe-dev-darwin-x64/: README.md  package.json
npm/dpe-dev-linux-arm64/: README.md  package.json
npm/dpe-dev-linux-x64/: README.md  package.json
npm/dpe-dev-win32-x64/: README.md  package.json
npm/dpe-framework-ts/: README.md  package.json
npm/dpe-linux-arm64/: README.md  package.json
npm/dpe-linux-x64/: README.md  package.json
npm/dpe-win32-x64/: README.md  package.json
runner/: Cargo.toml  README.md  package.json
runner/schemas/: pipeline.schema.json  runner-config.schema.json  stderr-events.schema.json  tool-meta.schema.json
runner/src/: bom.rs  catalog.rs  config.rs  control.rs  env.rs  env_interp.rs  home.rs  init.rs  install.rs  journal.rs  lib.rs  main.rs  monitor.rs  paths.rs  pipeline.rs  replicas.rs  runtime.rs  session_proxy.rs  spawn.rs  state.rs  stderr.rs  tools.rs  trace.rs  types.rs
runner/src/builtins/: dedup.rs  filter.rs  groupby.rs  mod.rs  route.rs  spread.rs  toggle.rs
runner/src/dag/: executor.rs  mod.rs  plan.rs
runner/src/expr/: eval.rs  lexer.rs  mod.rs
runner/src/test_runner/: builtin_driver.rs  channels.rs  compare.rs  fs_diff.rs  mod.rs  script.rs
runner/src/validate/: link.rs  mod.rs  resolve.rs  topology.rs
runner/tests/: builtins_integration.rs  e2e_dag.rs  e2e_linear_pipeline.rs  replicas_integration.rs  resolver_and_mock.rs  spawn_linear.rs  token_boundary.rs
runner/tests/fixtures/tools/mock-tool/: Cargo.toml  meta.json
runner/tests/fixtures/tools/mock-tool/src/: main.rs
scripts/: dev.ps1  lint.ps1  lint.sh  new-tool.ps1  new-tool.sh  scaffold-and-run.ps1  test.ps1  test.sh
test-pipeline/: README.md  run-all.sh
test-pipeline/standard/: pipeline.toml
test-pipeline/standard/configs/normalize/: uppercase.yaml
test-pipeline/standard/data/input/: _seed.ndjson
test-pipeline/standard/variants/: 00-read-write.yaml  01-scan-write.yaml  02-read-normalize-write.yaml  03-gate-checkpoint.yaml  04-write-hashed.yaml  05-filter.yaml  99-toggle-smoke.yaml
tools/checkpoint/: Cargo.toml  README.md  meta.json  spec.yaml
tools/checkpoint/src/: main.rs
tools/gate/: Cargo.toml  README.md  meta.json  spec.yaml
tools/gate/src/: main.rs
tools/normalize/: .gitignore  Cargo.toml  README.md  meta.json  spec.yaml
tools/normalize/src/: dict.rs  dispatch.rs  engine.rs  lib.rs  main.rs  path.rs  profile.rs  rulebook.rs  settings.rs
tools/normalize/src/expr/: eval.rs  lexer.rs  mod.rs  parser.rs
tools/normalize/src/ops/: compute.rs  currency.rs  dates.rs  dict_op.rs  keys.rs  mod.rs  numbers.rs  require.rs  shape.rs  strings.rs  to_object.rs
tools/read-file-stream/: Cargo.toml  README.md  meta.json  spec.yaml
tools/read-file-stream/src/: main.rs
tools/read-file-stream/tests/: stream_formats.rs
tools/scan-fs/: Cargo.toml  README.md  meta.json  spec.yaml
tools/scan-fs/src/: diff.rs  envelope_out.rs  hash_file.rs  lib.rs  main.rs  patterns.rs  scan.rs  settings.rs
tools/write-file-stream/: Cargo.toml  README.md  meta.json  spec.yaml
tools/write-file-stream-hashed/: Cargo.toml  README.md  meta.json  spec.yaml
tools/write-file-stream-hashed/src/: hashidx.rs  main.rs  pool.rs
tools/write-file-stream-hashed/tests/: dedup_writer.rs
tools/write-file-stream/src/: main.rs  pool.rs
tools/write-file-stream/tests/: append_writer.rs
(+11 files in other folders)
