[package]
name = "dpe"
version = "2.0.0-rc1"
edition = "2021"
description = "Data Processing Engine -- high-throughput streaming pipeline runner"
license = "AGPL-3.0-or-later"
repository = "https://github.com/combycode/dpe"

[lib]
name = "dpe"
path = "src/lib.rs"

[[bin]]
name = "dpe"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML -- serde-saphyr in strict YAML 1.2 mode. The `strict_booleans` option
# is required: without it the parser eats YAML 1.1 implicit booleans
# (n/y/no/yes/on/off) as `bool`, silently corrupting string-valued tags.
# Use only `from_str_with_options(..., yaml_opts())` -- never `from_str`.
# RUSTSEC-2025-0067/68-clean (replaces serde_yml).
serde-saphyr = "0.0.25"
toml = "1.1"

# Runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Hashing
blake2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = "0.4"
sha2 = "0.11"

# Archive extraction + HTTP download -- dpe install
tar = "0.4"
flate2 = "1"
ureq = "3.3.0"

# Utilities
dirs = "6"
thiserror = "2"
anyhow = "1"

# Cross-platform local sockets (named pipe on Windows, UDS on Unix).
# NO TCP for runner<->CLI control; this is the only transport.
interprocess = { version = "2", features = ["tokio"] }

# TUI for `dpe monitor`
ratatui   = "0.30"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"


[lints]
workspace = true
