[package]
name = "dpe"
version = "2.0.3"
edition = "2021"
description = "Data Processing Engine -- high-throughput streaming pipeline runner"
license = "AGPL-3.0-or-later"
repository = "https://github.com/combycode/dpe"

[lib]
name = "dpe"
path = "src/lib.rs"

[[bin]]
name = "dpe"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
# `preserve_order` makes serde_json::Map use IndexMap internally so JSON
# round-trips (e.g. apply_stage_override → serialize/deep_merge/deserialize)
# preserve declaration order. Required for route's `routes` field semantics.
serde_json = { version = "1", features = ["preserve_order"] }
# IndexMap: hashmap with insertion-order iteration. Used for route stage's
# `routes` field so YAML declaration order is preserved through deserialization
# (BTreeMap alphabetizes, breaking the documented "first-truthy-channel-wins"
# semantics — see Bug #10 fix in v2.0.1).
indexmap = { version = "2.14", features = ["serde"] }
# YAML -- serde-saphyr in strict YAML 1.2 mode. The `strict_booleans` option
# is required: without it the parser eats YAML 1.1 implicit booleans
# (n/y/no/yes/on/off) as `bool`, silently corrupting string-valued tags.
# Use only `from_str_with_options(..., yaml_opts())` -- never `from_str`.
# RUSTSEC-2025-0067/68-clean (replaces serde_yml).
serde-saphyr = "0.0.25"
toml = "1.1"

# Runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Hashing
blake2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = "0.4"
sha2 = "0.11"

# Archive extraction + HTTP download -- dpe install
tar = "0.4"
flate2 = "1"
ureq = "3.3.0"

# Utilities
dirs = "6"
thiserror = "2"
anyhow = "1"

# `.env` loader for `dpe --env-file <path>`. Active fork of the original
# (unmaintained) `dotenv`; explicit-path API only — we never silently
# load .env from CWD.
dotenvy = "0.15"

# Regex pattern matching for `dpe log --search --regex`. Already pulled
# in transitively elsewhere; declared explicit here so the import path
# stays stable. Version pinned to whatever's already in the lock.
regex = "1.12"

# `dpe test` runner — assert-script engine resolution (which::which),
# fs-ignore globs, JSON Schema mode for per-file comparison.
which       = "8"
globset     = "0.4"
jsonschema  = "0.46"

# Cross-platform local sockets (named pipe on Windows, UDS on Unix).
# NO TCP for runner<->CLI control; this is the only transport.
interprocess = { version = "2", features = ["tokio"] }

# TUI for `dpe monitor`
ratatui   = "0.30"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"


[lints]
workspace = true
