[package]
name = "combycode-dpe-tool-checkpoint"
version = "2.0.0-rc1"
edition = "2021"
description = "DPE tool -- buffer stdin, release to stdout only after wait_for_gates all met"
license = "AGPL-3.0-or-later"

[[bin]]
name = "checkpoint"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[lints]
workspace = true
