[package]
name = "combycode-dpe-tool-gate"
version = "2.0.0-rc1"
edition = "2021"
description = "DPE tool -- stateful pass-through that writes a gate state file periodically"
license = "AGPL-3.0-or-later"

[[bin]]
name = "gate"
path = "src/main.rs"

[dependencies]
combycode-dpe = { path = "../../frameworks/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[lints]
workspace = true
