[package]
name = "combycode-dpe-tool-scan-fs"
version = "2.0.0-rc1"
edition = "2021"
description = "DPE tool -- filesystem scanner (full + diff modes), files/dirs/both, glob filters, content hashing"
license = "AGPL-3.0-or-later"

[lib]
name = "combycode_dpe_tool_scan_fs"
path = "src/lib.rs"

[[bin]]
name = "scan-fs"
path = "src/main.rs"

[dependencies]
combycode-dpe = { path = "../../frameworks/rust" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
walkdir       = "2"
globset       = "0.4"
xxhash-rust   = { version = "0.8", features = ["xxh3"] }
blake2        = "0.10"
hex           = "0.4"
thiserror     = "2"

[dev-dependencies]
tempfile = "3"


[lints]
workspace = true
