[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{tool_name_kebab}}"
version = "0.1.0"
description = "{{description}}"
requires-python = ">=3.11"
dependencies = [
  "combycode-dpe @ file:///{{framework_abs_path}}",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/{{tool_name_snake}}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
